--- a/macros/alibava.in
+++ b/macros/alibava.in
@@ -97,6 +97,7 @@
 /allpix/extras/setTestStructurePosition 0.0 0.0 539.0 mm
 /allpix/extras/setTestStructureRotation 0.0 0.0 0.0 deg
 /allpix/extras/setTestStructureDetLink  305
+
 # Mimosa detector
 /allpix/det/setId                       305
 /allpix/det/setPosition                 0.0 0.0 539.0 mm
@@ -112,14 +113,20 @@
 /allpix/extras/setApplianceType         99
 /allpix/extras/setAppliancePosition     0. 0. 270. mm
 
+# The holder
+/allpix/extras/setApplianceType         98
+/allpix/extras/setAppliancePosition     0. 0. 270. mm
+
 # Mimosa detectorrotation goes in first angle, also negative
 /allpix/det/setId                       350
 /allpix/det/setPosition                 0.0 0.0 270.0 mm
-/allpix/det/setRotation                 -65.0 180.0 180.00 deg
+/allpix/det/setRotation                 -25.0 180.0 180.00 deg
 /allpix/det/setTemperature              203
 /allpix/det/setFlux                     0.e15
 /allpix/det/setLowTHL                   13. keV
 
+# Set a magnetic field
+/allpix/extras/setPeakField             0.0 0.0 0.0 T
 
 ####################################################################
 # Build detectors
@@ -140,17 +147,18 @@
 ####################################################################
 # Visualization
 # theta is side, phi is top
-##/vis/open OGLSX 1024x768-100+100
-##/vis/viewer/reset
-##/vis/viewer/set/viewpointThetaPhi 80 80
-##/vis/viewer/set/style wireframe
-##/vis/scene/create
-##/vis/scene/add/volume World -1 2
-##/vis/scene/add/trajectories
-##/vis/scene/add/hits
-##/vis/sceneHandler/attach
-##/tracking/storeTrajectory 1
-##/vis/viewer/zoom 1.0
+/vis/open OGLIXm 1024x768-100+100
+##/vis/open OGLIX 1024x768-100+100
+/vis/viewer/reset
+/vis/viewer/set/viewpointThetaPhi 40 35
+/vis/viewer/set/style wireframe
+/vis/scene/create
+/vis/scene/add/volume World -1 2
+/vis/scene/add/trajectories
+/vis/scene/add/hits
+/vis/sceneHandler/attach
+/tracking/storeTrajectory 1
+/vis/viewer/zoom 2.0
 
 
 #/vis/scene/add/axes 0. 0. 0. 1000. cm
@@ -182,7 +190,7 @@
 #/vis/modeling/trajectories/drawByCharge-0/default/setStepPtsSize 2
 #/vis/scene/endOfEventAction accumulate
 
-#/vis/viewer/flush
+/vis/viewer/flush
 
 /allpix/eutelescope/setFolderPath output
 /allpix/eutelescope/write 1
@@ -227,11 +235,11 @@
 
 /gps/particle e-
 /gps/pos/type Plane
-/gps/pos/shape Rectangle
+/gps/pos/shape Circle
 /gps/pos/centre 0.0 0.0 -100.0 mm
-/gps/pos/halfy 5000. um
-/gps/pos/halfx 5000. um
-#/gps/pos/radius 5000. um
+/gps/pos/halfy 20000. um
+/gps/pos/halfx 20000. um
+/gps/pos/radius 20000. um
 #/gps/direction 0 0 1
 /gps/energy 5.0 GeV
 /gps/ene/type Gauss
@@ -246,7 +254,7 @@
 ####################################################################
 # Shoot
 # event count
-/allpix/beam/frames 10000
+/allpix/beam/frames 2
 # 'rate'
 /allpix/beam/type const 2
 #/allpix/beam/type gauss 2 0.5
