--- a/macros/alibava.in
+++ b/macros/alibava.in
@@ -110,12 +110,12 @@
 ####################################################################
 
 # The box
-# /allpix/extras/setApplianceType         99
-# /allpix/extras/setAppliancePosition     0. 0. 270. mm
+/allpix/extras/setApplianceType         99
+/allpix/extras/setAppliancePosition     0. 0. 270. mm
 
 # The holder
-# /allpix/extras/setApplianceType         98
-# /allpix/extras/setAppliancePosition     0. 0. 270. mm
+/allpix/extras/setApplianceType         98
+/allpix/extras/setAppliancePosition     0. 0. 270. mm
 
 # Alibava rotations are included as in the gear file
 # alpha is first angle, second is 180.0 - beta, third is 180.0 - gamma
@@ -127,122 +127,57 @@
 /allpix/det/setFlux                     0.e15
 /allpix/det/setLowTHL                   13. keV
 
-# Set a magnetic field
+# Set a magnetic field, sign change wrt gear file
 /allpix/extras/setPeakField             0.0 0.0 0.0 T
 
+
 ####################################################################
-# Build detectors
-#/allpix/phys/Physics LIVERMORE_FTFP_BERT
+#### BUILD DETECTORS
+####################################################################
 /allpix/phys/Physics emstandard_opt0
 /allpix/det/setMaxStepLengthSensor 2 um
 /run/initialize
 /allpix/det/update
 
+
 ####################################################################
-# Verbose control
+#### VERBOSE CONTROL
+####################################################################
 /run/verbose 0
 /control/verbose 0
 /control/saveHistory
 /tracking/verbose 0
 /allpix/phys/verbose 0
 
+
 ####################################################################
-# Visualization
-# theta is side, phi is top
-#/vis/open OGLIXm 1024x768-100+100
-###/vis/open OGLIX 1024x768-100+100
-#/vis/viewer/reset
-#/vis/viewer/set/viewpointThetaPhi 40 35
-#/vis/viewer/set/style wireframe
-#/vis/scene/create
-#/vis/scene/add/volume World -1 2
-#/vis/scene/add/trajectories
-#/vis/scene/add/hits
-#/vis/sceneHandler/attach
-#/tracking/storeTrajectory 1
-#/vis/viewer/zoom 2.0
-
-
-#/vis/scene/add/axes 0. 0. 0. 1000. cm
-#/vis/viewer/set/style s
-#/vis/open OIX 1024x768-100+100
-#/vis/open OGLIXm 1024x768-100+100
-#/vis/open RayTracer
-#/vis/open OGLIQt
-#/vis/open OGLSQt
-#/vis/open OIX
-#/vis/open OGLSXm
-#/vis/open DAWNFILE
-#/vis/open OGLSX
-#/vis/open OGL 600x600-0+0
-#/vis/drawVolume
-#/vis/viewer/set/background 0.4 0.5 0.6
-
-
-
-
+#### VISUALISATION
+####################################################################
+# theta is side angle, phi is top angle
+/vis/open OGLIXm 1024x768-100+100
+/vis/viewer/reset
+/vis/viewer/set/viewpointThetaPhi 40 35
+/vis/viewer/set/style wireframe
+/vis/scene/create
+/vis/scene/add/volume World -1 2
+/vis/scene/add/trajectories
+/vis/scene/add/hits
+/vis/sceneHandler/attach
+/tracking/storeTrajectory 1
+/vis/viewer/zoom 2.0
 
 
 ####################################################################
-# Draw trajectories at end of event, showing trajectory points as
-# markers of size 2 pixels
-#/vis/scene/add/trajectories rich
-#/vis/modeling/trajectories/create/drawByCharge
-#/vis/modeling/trajectories/drawByCharge-0/default/setDrawStepPts false
-#/vis/modeling/trajectories/drawByCharge-0/default/setStepPtsSize 2
-#/vis/scene/endOfEventAction accumulate
-
+#### RUN
+####################################################################
 /vis/viewer/flush
-
 /allpix/eutelescope/setFolderPath output
 /allpix/eutelescope/write 1
-
-
-
-
-
-####################################################################
-# Write Telescope files
-#/allpix/timepixtelescope/setFolderPath TutoFiles
-#/allpix/timepixtelescope/setEventIDcolumn 0
-#/allpix/timepixtelescope/setSumTOT 1
-#/allpix/timepixtelescope/write 1
-#/allpix/config/setOutputPrefixWithPath TelescopeSim
-####################################################################
-# Source GPS
-#/gps/particle pi-
-#/gps/pos/type Beam
-#/gps/pos/sigma_r 5.0 mm
-#/gps/pos/centre 0 0 -100.0 mm
-#/gps/direction  0 0 1
-
-#/gps/ene/type User
-
-# spectra
-#/gps/hist/point 120000 1
-
-#/gps/source/list
-
-# Source GPS
-#/gps/particle mu+
-#/gps/pos/centre 0 0 -1.0 mm
-#/gps/direction  0 0 1
-
-#/gps/ene/type User
-#/gps/hist/type energy
-# spectra
-#/gps/hist/point 200000 1
-
-
-
 /gps/particle e-
 /gps/pos/type Plane
 /gps/pos/shape Circle
 /gps/pos/centre 0.0 0.0 -100.0 mm
-#/gps/pos/halfy 20000. um
-#/gps/pos/halfx 20000. um
 /gps/pos/radius 5000. um
-#/gps/direction 0 0 1
 /gps/energy 5.0 GeV
 /gps/ene/type Gauss
 /gps/ene/sigma 0.1 GeV
@@ -253,15 +188,14 @@
 /gps/pos/type Beam
 /gps/hist/type energy
 
+
 ####################################################################
-# Shoot
-# event count
-/allpix/beam/frames 1000
+#### SHOOT
+####################################################################
+# 'event count'
+/allpix/beam/frames 1
 # 'rate'
 /allpix/beam/type const 2
 #/allpix/beam/type gauss 2 0.5
 /allpix/beam/on
-
-##/vis/viewer/flush
-
 
