Addedd 'realistic' positions

--- a/macros/alibava_realistic.in
+++ b/macros/alibava_realistic.in
@@ -1,5 +1,7 @@
 ####################################################################
 #### Simulation of an ALiBaVa strip sensor in the DATURA Telescope at DESY
+#### 'Realistic' sensor positions taken from 2013 ALiBaVa run 22
+#### Beware that the positive x and y axes in allpix are reverse to EUTelescope
 ####################################################################
 
 
@@ -26,14 +28,14 @@
 
 # Al Holder
 /allpix/extras/setTestStructureType     8
-/allpix/extras/setTestStructurePosition 0.0 0.0 60.0 mm
-/allpix/extras/setTestStructureRotation 0.0 0.0 0.0 deg
+/allpix/extras/setTestStructurePosition -0.293925 0.206111 60.0 mm
+/allpix/extras/setTestStructureRotation 0.0 0.0 -0.0631166 deg
 /allpix/extras/setTestStructureDetLink  301
 
 # Mimosa detector
 /allpix/det/setId                       301
-/allpix/det/setPosition                 0.0 0.0 60.0 mm
-/allpix/det/setRotation                 0.0 180.0 180.0 deg
+/allpix/det/setPosition                 -0.293925 0.206111 60.0 mm
+/allpix/det/setRotation                 0.0 180.0 179.9368834 deg
 /allpix/det/setLowTHL                   13.0 keV
 
 
@@ -43,14 +45,14 @@
 
 # Al Holder
 /allpix/extras/setTestStructureType     8
-/allpix/extras/setTestStructurePosition 0.0 0.0 120.0 mm
-/allpix/extras/setTestStructureRotation 0.0 0.0 0.0 deg
+/allpix/extras/setTestStructurePosition -0.595662 0.100966 120.0 mm
+/allpix/extras/setTestStructureRotation 0.0 0.0 -0.00563301 deg
 /allpix/extras/setTestStructureDetLink  302
 
 # Mimosa detector
 /allpix/det/setId                       302
-/allpix/det/setPosition                 0.0 0.0 120.0 mm
-/allpix/det/setRotation                 0.0 180.0 180.00 deg
+/allpix/det/setPosition                 -0.595662 0.100966 120.0 mm
+/allpix/det/setRotation                 0.0 180.0 179.99436699 deg
 /allpix/det/setLowTHL                   13.0 keV
 
 
@@ -60,14 +62,14 @@
 
 # Al Holder
 /allpix/extras/setTestStructureType     8
-/allpix/extras/setTestStructurePosition 0.0 0.0 419.0 mm
-/allpix/extras/setTestStructureRotation 0.0 0.0 0.0 deg
+/allpix/extras/setTestStructurePosition -0.594746 -0.0643153 419.0 mm
+/allpix/extras/setTestStructureRotation 0.0 0.0 0.00573452 deg
 /allpix/extras/setTestStructureDetLink  303
 
 # Mimosa detector
 /allpix/det/setId                       303
-/allpix/det/setPosition                 0.0 0.0 419.0 mm
-/allpix/det/setRotation                 0.0 180.0 180.0 deg
+/allpix/det/setPosition                 -0.594746 -0.0643153 419.0 mm
+/allpix/det/setRotation                 0.0 180.0 179.99426548 deg
 /allpix/det/setLowTHL                   13.0 keV
 
 
@@ -77,14 +79,14 @@
 
 # Al Holder
 /allpix/extras/setTestStructureType     8
-/allpix/extras/setTestStructurePosition 0.0 0.0 479 mm
-/allpix/extras/setTestStructureRotation 0.0 0.0 0.0 deg
+/allpix/extras/setTestStructurePosition 0.0833761 -0.108647 479 mm
+/allpix/extras/setTestStructureRotation 0.0 0.0 -0.240064 deg
 /allpix/extras/setTestStructureDetLink  304
 
 # Mimosa detector
 /allpix/det/setId                       304
-/allpix/det/setPosition                 0.0 0.0 479 mm
-/allpix/det/setRotation                 0.0 180.0 180 deg
+/allpix/det/setPosition                 0.0833761 -0.108647 479 mm
+/allpix/det/setRotation                 0.0 180.0 179.759936 deg
 /allpix/det/setLowTHL                   13.0 keV
 
 
@@ -94,13 +96,13 @@
 
 # Al Holder
 /allpix/extras/setTestStructureType     8
-/allpix/extras/setTestStructurePosition 0.0 0.0 539.0 mm
+/allpix/extras/setTestStructurePosition 0.544312 -0.0627556 539.0 mm
 /allpix/extras/setTestStructureRotation 0.0 0.0 0.0 deg
 /allpix/extras/setTestStructureDetLink  305
 
 # Mimosa detector
 /allpix/det/setId                       305
-/allpix/det/setPosition                 0.0 0.0 539.0 mm
+/allpix/det/setPosition                 0.544312 -0.0627556 539.0 mm
 /allpix/det/setRotation                 0.0 180.0 180.0 deg
 /allpix/det/setLowTHL                   13.0 keV
 
@@ -111,20 +113,20 @@
 
 # The box
 /allpix/extras/setApplianceType         99
-/allpix/extras/setAppliancePosition     0.0 0.0 270.0 mm
+/allpix/extras/setAppliancePosition     -0.330558 0.179223 269.9985646 mm
 
 # The holder
 /allpix/extras/setApplianceType         98
-/allpix/extras/setAppliancePosition     0.0 0.0 270.0 mm
+/allpix/extras/setAppliancePosition     -0.330558 0.179223 269.9985646 mm
 
 # Alibava rotations are included as in the gear file
 # alpha is first angle, second is 180.0 - beta, third is 180.0 - gamma
 
 /allpix/det/setId                       350
-/allpix/det/setPosition                 0.0 0.0 270.0 mm
-/allpix/det/setRotation                 0.0 180.0 180.00 deg
+/allpix/det/setPosition                 -0.330558 0.179223 269.9985646 mm
+/allpix/det/setRotation                 -0.00822646 180.000191338 178.66256 deg
 /allpix/det/setTemperature              203
-/allpix/det/setFlux                     0.0e15
+/allpix/det/setFlux                     0.e15
 /allpix/det/setLowTHL                   13.0 keV
 
 # Set a magnetic field, sign change wrt gear file
