Fixed 0 chan bug in AlibavaDigitizer LCIO output now with correct sensor ids working CBC examples

--- a/macros/cbc.in
+++ b/macros/cbc.in
@@ -27,13 +27,13 @@
 
 # Al Holder
 /allpix/extras/setTestStructureType     8
-/allpix/extras/setTestStructurePosition 0.0 0.0 60.0 mm
+/allpix/extras/setTestStructurePosition 0.0 0.0 150.0 mm
 /allpix/extras/setTestStructureRotation 0.0 0.0 0.0 deg
 /allpix/extras/setTestStructureDetLink  301
 
 # Mimosa detector
 /allpix/det/setId                       301
-/allpix/det/setPosition                 0.0 0.0 60.0 mm
+/allpix/det/setPosition                 0.0 0.0 150.0 mm
 /allpix/det/setRotation                 0.0 180.0 180.0 deg
 /allpix/det/setLowTHL                   13. keV
 /allpix/det/setAcqTime                  115000. ns
@@ -45,13 +45,13 @@
 
 # Al Holder
 /allpix/extras/setTestStructureType     8
-/allpix/extras/setTestStructurePosition 0.0 0.0 120.0 mm
+/allpix/extras/setTestStructurePosition 0.0 0.0 300.0 mm
 /allpix/extras/setTestStructureRotation 0.0 0.0 0.0 deg
 /allpix/extras/setTestStructureDetLink  302
 
 # Mimosa detector
 /allpix/det/setId                       302
-/allpix/det/setPosition                 0.0 0.0 120.0 mm
+/allpix/det/setPosition                 0.0 0.0 300.0 mm
 /allpix/det/setRotation                 0.0 180.0 180.00 deg
 /allpix/det/setLowTHL                   13. keV
 /allpix/det/setAcqTime                  9115000. ns
@@ -63,13 +63,13 @@
 
 # Al Holder
 /allpix/extras/setTestStructureType     8
-/allpix/extras/setTestStructurePosition 0.0 0.0 419.0 mm
+/allpix/extras/setTestStructurePosition 0.0 0.0 442.0 mm
 /allpix/extras/setTestStructureRotation 0.0 0.0 0.0 deg
 /allpix/extras/setTestStructureDetLink  303
 
 # Mimosa detector
 /allpix/det/setId                       303
-/allpix/det/setPosition                 0.0 0.0 419.0 mm
+/allpix/det/setPosition                 0.0 0.0 442.0 mm
 /allpix/det/setRotation                 0.0 180.0 180.0 deg
 /allpix/det/setLowTHL                   13. keV
 /allpix/det/setAcqTime                  115000. ns
@@ -81,13 +81,13 @@
 
 # Al Holder
 /allpix/extras/setTestStructureType     8
-/allpix/extras/setTestStructurePosition 0.0 0.0 479 mm
+/allpix/extras/setTestStructurePosition 0.0 0.0 592 mm
 /allpix/extras/setTestStructureRotation 0.0 0.0 0.0 deg
 /allpix/extras/setTestStructureDetLink  304
 
 # Mimosa detector
 /allpix/det/setId                       304
-/allpix/det/setPosition                 0.0 0.0 479 mm
+/allpix/det/setPosition                 0.0 0.0 592 mm
 /allpix/det/setRotation                 0.0 180.0 180 deg
 /allpix/det/setLowTHL                   13. keV
 /allpix/det/setAcqTime                  115000. ns
@@ -99,13 +99,13 @@
 
 # Al Holder
 /allpix/extras/setTestStructureType     8
-/allpix/extras/setTestStructurePosition 0.0 0.0 539.0 mm
+/allpix/extras/setTestStructurePosition 0.0 0.0 642.0 mm
 /allpix/extras/setTestStructureRotation 0.0 0.0 0.0 deg
 /allpix/extras/setTestStructureDetLink  305
 
 # Mimosa detector
 /allpix/det/setId                       305
-/allpix/det/setPosition                 0.0 0.0 539.0 mm
+/allpix/det/setPosition                 0.0 0.0 642.0 mm
 /allpix/det/setRotation                 0.0 180.0 180.0 deg
 /allpix/det/setLowTHL                   13. keV
 /allpix/det/setAcqTime                  115000. ns
@@ -115,10 +115,8 @@
 #### CBC DUT
 ####################################################################
 
-#### detector rotation goes in first angle, also negative
-
 /allpix/det/setId                       351
-/allpix/det/setPosition                 0.0 0.0 270.0 mm
+/allpix/det/setPosition                 0.0 0.0 370 mm
 /allpix/det/setRotation                 0.0 180.0 180.00 deg
 /allpix/det/setTemperature              203
 /allpix/det/setFlux                     0.e15
@@ -126,13 +124,28 @@
 /allpix/det/setAcqTime                  25. ns
 
 /allpix/det/setId                       352
-/allpix/det/setPosition                 0.0 0.0 274.0 mm
+/allpix/det/setPosition                 0.0 0.0 372 mm
 /allpix/det/setRotation                 0.0 180.0 180.00 deg
 /allpix/det/setTemperature              203
 /allpix/det/setFlux                     0.e15
 /allpix/det/setLowTHL                   13. keV
 /allpix/det/setAcqTime                  25. ns
-##
+
+
+####################################################################
+#### Pixel Reference
+####################################################################
+
+/allpix/det/setId                       906
+/allpix/det/setPosition                 0.0 0.0 692.0 mm
+/allpix/det/setRotation                 23.0 14.5 180.00 deg
+/allpix/det/setTemperature              203
+/allpix/det/setFlux                     0.
+/allpix/det/setLowTHL                   13. keV
+/allpix/det/setAcqTime                  25. ns
+/allpix/det/skipPropagation             1
+
+
 
 #### Set a magnetic field
 ###/allpix/extras/setPeakField             0.0 0.0 0.0 T
@@ -157,19 +170,19 @@
 ####################################################################
 # Visualization
 # theta is side, phi is top
-/vis/open OGLIXm 1024x768-100+100
-##/vis/open OGLIX 1024x768-100+100
-/vis/viewer/reset
-/vis/viewer/set/viewpointThetaPhi 40 35
-/vis/viewer/set/style wireframe
-/vis/scene/create
-/vis/scene/add/volume World -1 2
-/vis/scene/add/trajectories
-/vis/scene/add/hits
-/vis/sceneHandler/attach
-/tracking/storeTrajectory 1
-/vis/viewer/zoom 2.0
-######
+#/vis/open OGLIXm 1024x768-100+100
+###/vis/open OGLIX 1024x768-100+100
+#/vis/viewer/reset
+#/vis/viewer/set/viewpointThetaPhi 40 35
+#/vis/viewer/set/style wireframe
+#/vis/scene/create
+#/vis/scene/add/volume World -1 2
+#/vis/scene/add/trajectories
+#/vis/scene/add/hits
+#/vis/sceneHandler/attach
+#/tracking/storeTrajectory 1
+#/vis/viewer/zoom 2.0
+#######
 
 #/vis/scene/add/axes 0. 0. 0. 1000. cm
 #/vis/viewer/set/style s
@@ -264,7 +277,7 @@
 ####################################################################
 # Shoot
 # event count
-/allpix/beam/frames 2
+/allpix/beam/frames 10000
 # 'rate'
 /allpix/beam/type const 1
 #/allpix/beam/type gauss 3 0.5
