--- a/macros/cbc.in
+++ b/macros/cbc.in
@@ -1,5 +1,5 @@
 ####################################################################
-#### Simulation of an ALiBaVa strip sensor in the DATURA Telescope at DESY
+#### Simulation of a 2CBC2 in the DATURA Telescope at DESY
 ####################################################################
 
 
@@ -26,13 +26,13 @@
 
 # Al Holder
 /allpix/extras/setTestStructureType     8
-/allpix/extras/setTestStructurePosition 0.0 0.0 60.0 mm
+/allpix/extras/setTestStructurePosition 0.0 0.0 150.0 mm
 /allpix/extras/setTestStructureRotation 0.0 0.0 0.0 deg
 /allpix/extras/setTestStructureDetLink  301
 
 # Mimosa detector
 /allpix/det/setId                       301
-/allpix/det/setPosition                 0.0 0.0 60.0 mm
+/allpix/det/setPosition                 0.0 0.0 150.0 mm
 /allpix/det/setRotation                 0.0 180.0 180.0 deg
 /allpix/det/setLowTHL                   13.0 keV
 
@@ -43,13 +43,13 @@
 
 # Al Holder
 /allpix/extras/setTestStructureType     8
-/allpix/extras/setTestStructurePosition 0.0 0.0 120.0 mm
+/allpix/extras/setTestStructurePosition 0.0 0.0 300.0 mm
 /allpix/extras/setTestStructureRotation 0.0 0.0 0.0 deg
 /allpix/extras/setTestStructureDetLink  302
 
 # Mimosa detector
 /allpix/det/setId                       302
-/allpix/det/setPosition                 0.0 0.0 120.0 mm
+/allpix/det/setPosition                 0.0 0.0 300.0 mm
 /allpix/det/setRotation                 0.0 180.0 180.00 deg
 /allpix/det/setLowTHL                   13.0 keV
 
@@ -60,13 +60,13 @@
 
 # Al Holder
 /allpix/extras/setTestStructureType     8
-/allpix/extras/setTestStructurePosition 0.0 0.0 419.0 mm
+/allpix/extras/setTestStructurePosition 0.0 0.0 442.0 mm
 /allpix/extras/setTestStructureRotation 0.0 0.0 0.0 deg
 /allpix/extras/setTestStructureDetLink  303
 
 # Mimosa detector
 /allpix/det/setId                       303
-/allpix/det/setPosition                 0.0 0.0 419.0 mm
+/allpix/det/setPosition                 0.0 0.0 442.0 mm
 /allpix/det/setRotation                 0.0 180.0 180.0 deg
 /allpix/det/setLowTHL                   13.0 keV
 
@@ -77,13 +77,13 @@
 
 # Al Holder
 /allpix/extras/setTestStructureType     8
-/allpix/extras/setTestStructurePosition 0.0 0.0 479 mm
+/allpix/extras/setTestStructurePosition 0.0 0.0 592 mm
 /allpix/extras/setTestStructureRotation 0.0 0.0 0.0 deg
 /allpix/extras/setTestStructureDetLink  304
 
 # Mimosa detector
 /allpix/det/setId                       304
-/allpix/det/setPosition                 0.0 0.0 479 mm
+/allpix/det/setPosition                 0.0 0.0 592 mm
 /allpix/det/setRotation                 0.0 180.0 180 deg
 /allpix/det/setLowTHL                   13.0 keV
 
@@ -94,38 +94,43 @@
 
 # Al Holder
 /allpix/extras/setTestStructureType     8
-/allpix/extras/setTestStructurePosition 0.0 0.0 539.0 mm
+/allpix/extras/setTestStructurePosition 0.0 0.0 642.0 mm
 /allpix/extras/setTestStructureRotation 0.0 0.0 0.0 deg
 /allpix/extras/setTestStructureDetLink  305
 
 # Mimosa detector
 /allpix/det/setId                       305
-/allpix/det/setPosition                 0.0 0.0 539.0 mm
+/allpix/det/setPosition                 0.0 0.0 642.0 mm
 /allpix/det/setRotation                 0.0 180.0 180.0 deg
 /allpix/det/setLowTHL                   13.0 keV
 
 
 ####################################################################
-#### ALIBAVA DUT
+#### CBC DUT
 ####################################################################
-# Alibava rotations are included as in the gear file
+# CBC rotations are included as in the gear file
 # alpha is first angle, second is 180.0 - beta, third is 180.0 - gamma
 
-# The box
-/allpix/extras/setApplianceType         99
-/allpix/extras/setAppliancePosition     0.0 0.0 270.0 mm
-
-# The holder
-/allpix/extras/setApplianceType         98
-/allpix/extras/setAppliancePosition     0.0 0.0 270.0 mm
-
-# The DUT
-/allpix/det/setId                       350
-/allpix/det/setPosition                 0.0 0.0 270.0 mm
+/allpix/det/setId                       351
+/allpix/det/setPosition                 0.0 0.0 370 mm
 /allpix/det/setRotation                 0.0 180.0 180.00 deg
-/allpix/det/setTemperature              203
-/allpix/det/setFlux                     0.0e15
 /allpix/det/setLowTHL                   13.0 keV
+
+/allpix/det/setId                       352
+/allpix/det/setPosition                 0.0 0.0 372 mm
+/allpix/det/setRotation                 0.0 180.0 180.00 deg
+/allpix/det/setLowTHL                   13.0 keV
+
+
+####################################################################
+#### CMS Pixel Reference Module
+####################################################################
+
+/allpix/det/setId                       906
+/allpix/det/setPosition                 0.0 0.0 692.0 mm
+/allpix/det/setRotation                 23.0 14.5 180.00 deg
+/allpix/det/setLowTHL                   13.0 keV
+/allpix/det/skipPropagation             1
 
 
 ####################################################################
