--- a/macros/alibava_bfield.in
+++ b/macros/alibava_bfield.in
@@ -1,5 +1,5 @@
 ####################################################################
-#### Simulation of an ALiBaVa strip sensor in the DATURA Telescope at DESY
+#### Simulation of an ALiBaVa strip sensor in the DATURA Telescope at DESY with a magnetic field
 ####################################################################
 
 
